test/sema/positive/struct_typedef01.impala
struct S { x: int }

type T = S;

fn main() -> int {
   let s: T = T { x: 4 };
   s.x
}
